kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mydb
  namespace: mvisuals
spec:
  serviceName: mydb
  replicas: 1
  selector:
    matchLabels:
      app: mydb
  template:
    metadata:
      labels:
        app: mydb
    spec:
      hostname: mydb
      containers:
      - name: mydb
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
            - name: pvc
              mountPath: /var/lib/docker/volumes/hw5_final_pgdata/_data
      volumes:
      - name: pvc
        persistentVolumeClaim:
          claimName: pvc
