kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvisuals-deployment
  namespace: mvisuals
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mvisuals
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxUnavailable: 1
    maxSurge: 1
  template:
    metadata:
      labels:
        app: mvisuals
    spec:
      containers:
        - name: mvisuals-pod
          image: matt533/hw5_final:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mvisuals-service
  namespace: mvisuals
spec:
  type: LoadBalancer
  selector:
    app: mvisuals
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
