kubernetes/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb
  namespace: mvisuals
spec:
  clusterIP: None
  selector:
    app: mydb
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
