kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvisuals-ingress
  namespace: mvisuals
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: mvisuals.195100.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mvisuals-service
            port:
              number: 80
